--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -69,4 +69,88 @@
     opacity: 1;
 }
 
+/* ISOTOPE FILTER's CSS  */
+
+.portfolio{
+	min-height: 100vh;
+	padding:50px 15px;
+	background-color: #fff;
+	float: left;
+	width:100%;
+}
+
+.heading{
+	width:100%;
+	float: left;
+}
+
+.portfolio .heading h1{
+	font-size:35px;
+	color:#333;
+	margin:0px 0px 20px ;
+	text-align: center;
+    letter-spacing:0.5px;
+    font-family: 'Cairo', sans-serif;
+    font-weight: 900;
+}
+
+.portfolio .filter-btn{
+	float: left;
+	width:100%;
+	text-align: center;
+}
+.portfolio .filter-btn ul{
+	list-style: none;
+	margin:0;
+	padding:0;
+}
+.portfolio .filter-btn{
+	padding:30px 0px 20px;
+}
+
+.portfolio .filter-btn ul li{
+	display: inline-block;
+	background-color:#fff;
+	padding:6px 15px;
+	color:#333;
+	border-radius:5px;
+	margin:0px 1px;
+	cursor: pointer;
+	font-size:16px;
+    position: relative;
+}
+
+.portfolio .filter-btn ul li:after {
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    width: 100%;
+    height: 2px;
+    background: #7fad39;
+    content: "";
+    opacity: 0;
+}
+
+.portfolio .filter-btn ul li.active:after {
+    opacity: 1 ;
+}
+.portfolio .items{
+	float: left;
+	width:100%;
+}
+
+.portfolio .items .box{
+	float: left;
+	width: 25%;
+	padding:15px;
+	transition: all 1s ease;
+}
+
+.portfolio .items .box .inner img{
+	width:100%;
+	display: block;
+}
+
+
+
 
