--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,12 +1,13 @@
 <footer class="flex-rw">
   <section class="footer-bottom-section flex-rw">
     <div class="footer-bottom-wrapper">
-      <i class="fa fa-copyright" role="copyright">
-
-      </i> 2019 Pavilion in <address class="footer-address" role="company address">Bergen, NY</address><span class="footer-bottom-rights"> - All Rights Reserved - </span>
+     <span> 	&copy; </span>
+      
+      2019 LE MARCHE DE GARLANDE 
+        <!-- <address class="footer-address" role="company address">Bergen, NY</address><span class="footer-bottom-rights"> - All Rights Reserved - </span> -->
     </div>
-    <div class="footer-bottom-wrapper">
+    <!-- <div class="footer-bottom-wrapper">
       <a href="/terms-of-use.html" class="generic-anchor" rel="nofollow">Terms</a> | <a href="/privacy-policy.html" class="generic-anchor" rel="nofollow">Privacy</a>
-    </div>
+    </div> -->
   </section>
 </footer>
