--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -1,3 +1,26 @@
 .header__logo a {
     width: 65px;
 }
+
+.humberger__open img {
+    width: 20px;
+}
+
+.visibility_visible {
+    visibility: visible;
+}
+
+.visible_menu {
+    left: 0 !important;
+    opacity: 1 !important;
+}
+
+@media only screen and (max-width: 767px) {
+    .humberger__open {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }   
+}
+
+
