--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -15,6 +15,56 @@
     display: none;
 }
 
+.product__item__pic {
+    background-color: transparent;
+    position: relative;
+    border: 6px solid #f58b36;
+    border-radius: 15px;
+}
+
+.product__item__pic > img {
+    width: 100%;
+    height: 100%;
+    transition: all ease 0.5s;
+}
+
+.product__item__pic__hover {
+    position: absolute;
+    left: 0;
+    /* top: 0; */
+    right: 0;
+    bottom: -100%;
+    background-color: rgba(0,0,0,0.3);
+    z-index: 1;
+    padding: 10px;
+    border-radius: 0;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.product__item:hover .product__item__pic .product__item__pic__hover {
+    bottom: 0;
+}
+
+.product__item__pic__hover li {
+    background-color: #333;
+    padding: 10px;
+    border-radius: 50%;
+}
+
+.product__item__pic__hover li img {
+    width: 15px;
+}
+
+.product__item:hover .product__item__pic > img {
+    transition: all ease 0.5s;
+    transform: scale(1.5) rotate(45deg);
+}
+
+
+
+
 
 
 
