--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -87,31 +87,33 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6" *ngFor="let item of productList">
                     <div class="product__item">
-                        <div class="product__item__pic set-bg" [style.backgroundImage]="'url(assets/'+ item.image_url +')'">
+                        <!-- [style.backgroundImage]="'url(assets/'+ item.image_url +')'" -->
+                        <div class="product__item__pic set-bg" >
+                            <img [src]="'assets/'+ item.image_url">
                             <ul class="product__item__pic__hover">
                                 <li>
                                     
-                                    <img src="" />
+                                    <img src="assets/img/icons/white-heart-outline.svg" />
                                 
                                 </li>
 
                                 <li>
                                     
-                                        <img src="" />
+                                    <img src="assets/img/icons/white-retweet.svg" />
                                     
                                 </li>
 
                                 <li>
                                     
-                                        <img src="" />
+                                    <img src="assets/img/icons/white-shopping-cart.svg" />
                                     
                                 </li>
                                 
                             </ul>
                         </div>
                         <div class="product__item__text">
-                            <h6><a href="#"> {{item.prodName}} </a></h6>
-                            <h5> {{item.price}} </h5>
+                            <h6><a href="#"> {{item.product_name}} </a></h6>
+                            <h5> &euro; {{item.price}} </h5>
                         </div>
                     </div>
                 </div>
