--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -91,9 +91,10 @@
                         <div class="product__item__pic set-bg" >
                             <img [src]="'assets/'+ item.image_url">
                             <ul class="product__item__pic__hover">
-                                <li>
+                                <li [ngClass]="{'green_bg': item.liked === true}" (click)="likeProduct(item.product_id)">
                                     
-                                    <img src="assets/img/icons/white-heart-outline.svg" />
+                                    <img *ngIf="item.liked === false" src="assets/img/icons/white-heart-outline.svg" />
+                                    <img *ngIf="item.liked === true" src="assets/img/icons/white-heart-fill.svg" />
                                 
                                 </li>
 
@@ -103,10 +104,11 @@
                                     
                                 </li>
 
-                                <li>
+                                <li [ngClass]="{'green_bg': item.shopped === true}" (click)="shoppedProduct(item.product_id)">
                                     
-                                    <img src="assets/img/icons/white-shopping-cart.svg" />
-                                    
+                                    <img *ngIf="item.shopped === false" src="assets/img/icons/white-shopping-outline.svg" />
+                                    <img *ngIf="item.shopped === true" src="assets/img/icons/white-shopping-cart.svg" />
+
                                 </li>
                                 
                             </ul>
