--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -49,7 +49,7 @@
 
 .product__item__pic__hover li {
     background-color: #333;
-    padding: 10px;
+    padding: 8px;
     border-radius: 50%;
 }
 
@@ -59,7 +59,17 @@
 
 .product__item:hover .product__item__pic > img {
     transition: all ease 0.5s;
-    transform: scale(1.5) rotate(45deg);
+    transform: scale(1.5);
+}
+
+.product__item__pic__hover li {
+    cursor: pointer;
+    border: 1px solid transparent;
+}
+
+.green_bg {
+    background-color: #7fad39 !important;
+    border: 1px solid #fff !important;
 }
 
 
