--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-nav-bar> </app-nav-bar>
+<div class="global_cover">
+    <router-outlet></router-outlet>
+</div>
 
-<router-outlet></router-outlet>
 
 <app-footer> </app-footer>
