--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -38,6 +38,14 @@ li {
     font-size: 10px;
 }
 
+header.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #fff;
+}
+
 @media only screen and (max-width: 767px) {
     .humberger__open {
         display: flex;
