--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <div (scroll)="scrollHandler($event)">
-<!-- Breadcrumb Section Begin -->
+<!-- Breadcrumb Section Begin (scroll)="scrollHandler($event)" -->
 <section class="breadcrumb-section set-bg" data-setbg="img/breadcrumb.jpg">
   <div class="container">
       <div class="row">
