--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -44,6 +44,8 @@ header.header {
     left: 0;
     right: 0;
     background-color: #fff;
+    z-index: 2;
+    box-shadow: 0 0px 8px 1px #333;
 }
 
 @media only screen and (max-width: 767px) {
