--- a/src/app/liked-shopped/liked-shopped.component.html
+++ b/src/app/liked-shopped/liked-shopped.component.html
@@ -1,3 +1,58 @@
-<p>
-  liked-shopped works!
-</p>
+<div class="outer_table_wrapper">
+  <div class="table_wrapper">
+      <table>
+          <tr> 
+              <th> S No </th>
+              <th class="text-center"> Product Image </th>
+              <th> Product Name </th>
+              <th> Price </th>
+              <th> Quantity </th>
+              <th class="text-center"> Action </th>
+          </tr>
+          <tr *ngFor="let item of shoppedArr;let i = index;"> 
+              <td> {{i+1}} </td>
+              <td>  
+                <div class="table_img_wrapper text-center m-auto">
+                    <img [src]="'assets/'+ item.image_url">
+                </div>
+              </td>
+              <td>  
+                {{item.product_name}}                
+              </td>
+              <td> &euro; {{item.chagedPrice}} </td>
+              <td> {{item.quantity}} {{item.measure_scale}}  </td>
+              <td>  
+                <div class="d-flex text-center justify-content-center">
+                  <img class="table_icon" src="assets/img/icons/minus.svg" (click)="incDecProd('dec', item.product_id)" />
+                  <img class="table_icon ml-3" src="assets/img/icons/plus.svg" (click)="incDecProd('inc', item.product_id)" />
+                </div>
+              </td>
+          </tr>
+      </table>
+  </div>
+  <!-- <div class="table_wrapper">
+      <table>
+          <tr> 
+              <th> S No </th>
+              <th> Product Image </th>
+              <th> Product Name </th>
+              <th> Price </th>
+              <th> Quantity </th>
+              <th> Action </th>
+          </tr>
+          <tr> 
+              <td>  </td>
+              <td>  </td>
+              <td>  </td>
+              <td>  </td>
+              <td>  </td>
+              <td>  
+                <div class="d-flex">
+                  <img class="table_icon" src="assets/img/icons/minus.svg" />
+                  <img class="table_icon" src="assets/img/icons/plus.svg" />
+                </div>
+              </td>
+          </tr>
+      </table>
+  </div> -->
+</div>
