--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -64,14 +64,14 @@
                          <li routerLinkActive="active">
                              <a [routerLink]="['/contact']">Contact</a>
                          </li>
-                         <li class="position-relative">
+                         <li class="position-relative" (click)="goToShopList('liked')">
                             
                                 <span *ngIf="likedLength" class="number-count"> {{likedLength}} </span>
                                 <img *ngIf="liked?.length === 0 || !liked" class="nav_icon"  src="assets/img/icons/green-heart-outline.svg" />
                                 <img *ngIf="liked?.length > 0" class="nav_icon" src="assets/img/icons/green-heart-fill.svg" />
                              
                         </li>
-                         <li class="position-relative"> 
+                         <li class="position-relative" (click)="goToShopList('shopped')"> 
                             
                                 <span *ngIf="shoppedLength" class="number-count"> {{shoppedLength}} </span>
                                 <img *ngIf="shopped?.length === 0 || !shopped" class="nav_icon" src="assets/img/icons/green-shopping-outline.svg" />
