--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -22,10 +22,39 @@
     border-radius: 15px;
 }
 
-.product__item__pic > img {
+.product__item__pic > img.thumb_img {
     width: 100%;
     height: 100%;
     transition: all ease 0.5s;
+}
+
+.product__item__pic .like_icon_wrapper {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    background-color: #fff;
+    padding: 10px;
+    box-sizing: content-box;
+    border: 1px solid #333;
+    border-radius: 50%;
+    cursor: pointer;
+
+    /* animation: pulse 2s infinite; */
+}
+
+.product__item__pic .like_icon_wrapper.active {
+    background-color: #ee3f2a;
+    border: 1px solid #ee3f2a;
+}
+
+.product__item__pic .like_icon_wrapper:active,
+.product__item__pic .like_icon_wrapper:hover {
+    animation: pulse 2s infinite;
+}
+
+.product__item__pic .like_icon_wrapper img.like_icon {
+    width: 20px;
+    
 }
 
 .product__item__pic__hover {
@@ -72,7 +101,29 @@
     border: 1px solid #fff !important;
 }
 
+/* pulse Animation effect */
 
+@keyframes pulse {
+    0% {
+        box-shadow: 0 0 0 2px rgba(238, 63, 42, 0.7);
+    }
+
+    35% {
+        box-shadow: 0 0 0 10px rgba(238, 63, 42, 0.6);
+    }
+
+    70% {
+        box-shadow: 0 0 0 20px rgba(238, 63, 42, 0.5);
+    }
+
+    90% {
+        box-shadow: 0 0 0 2px rgba(238, 63, 42, 0.7);
+    }
+
+    100% {
+        box-shadow: 0 0 0 0 rgba(46, 204, 113, 0);
+    }
+}
 
 
 
