--- a/src/app/liked-shopped/liked-shopped.component.html
+++ b/src/app/liked-shopped/liked-shopped.component.html
@@ -29,9 +29,12 @@
               </td>
           </tr>
       </table>
-      
+      <div class="text-center no_data" *ngIf="!shoppedArr || shoppedArr.length === 0"> 
+        No Data Available
+      </div>
   </div>
-  <div class="total_row total_width d-flex align-items-center justify-content-between">
+
+  <div *ngIf="shoppedArr.length > 0" class="total_row total_width d-flex align-items-center justify-content-between">
       <h1> Total </h1>
       <h2> &euro; {{totalPrice}} </h2>
   </div>
