--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -6,4 +6,20 @@
   margin-top: 45px;
 }
 
+.contact-form form input {
+  margin-bottom: 10px;
+}
+
+.contact-form form small {
+  font-size: 14px;
+}
+
+.contact-form form .form-group label {
+  font-size: 16px;
+  font-weight: normal;
+}
+
+
+
+
 
