--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,24 +11,24 @@
     <div class="item active">
       <img src="assets/img/slide1.jpg" alt="Chania">
       <div class="carousel-caption">
-        <h3>Los Angeles</h3>
-        <p>LA is always so much fun!</p>
+        <h3>Votre source de motivation est l’ingrédient qui peut faire toute la différence</h3>
+        <!-- <p>LA is always so much fun!</p> -->
       </div>
     </div>
 
     <div class="item">
       <img src="assets/img/slide3.jpg" alt="Chicago">
       <div class="carousel-caption">
-        <h3>Chicago</h3>
-        <p>Thank you, Chicago!</p>
+        <h3>Vous n’êtes pas encore arrivés mais vous êtes plus proche qu’hier</h3>
+        <!-- <p>Thank you, Chicago!</p> -->
       </div>
     </div>
 
     <div class="item">
       <img src="assets/img/slide2.jpg" alt="New York">
       <div class="carousel-caption">
-        <h3>New York</h3>
-        <p>We love the Big Apple!</p>
+        <h3>C’est toujours le bon moment</h3>
+        <!-- <p>We love the Big Apple!</p> -->
       </div>
     </div>
   </div>
