--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -6,8 +6,12 @@
      </div>
      <nav class="humberger__menu__nav mobile-menu" [ngClass]="{'d-block': openMenuParam}">
          <ul>
-             <li routerLinkActive="active"><a [routerLink]="['/home']">Home</a></li>
-             <li routerLinkActive="active"><a [routerLink]="['/products']">Shop</a></li>
+             <li routerLinkActive="active">
+                 <a [routerLink]="['/home']" (click)="closeMobileMenu()">Home</a>
+             </li>
+             <li routerLinkActive="active">
+                 <a [routerLink]="['/products']" (click)="closeMobileMenu()">Shop</a>
+             </li>
              <!-- <li><a href="#">Pages</a>
                  <ul class="header__menu__dropdown">
                      <li><a href="./shop-details.html">Shop Details</a></li>
@@ -17,7 +21,16 @@
                  </ul>
              </li> -->
              <!-- <li><a href="./blog.html">Blog</a></li> -->
-             <li routerLinkActive="active"><a [routerLink]="['/contact']">Contact</a></li>
+             <li routerLinkActive="active" class="mb-5">
+                 <a [routerLink]="['/contact']" (click)="closeMobileMenu()">Contact</a>
+             </li>
+             <li (click)="goToShopList('shopped')" class="mb-5"> 
+                <div class="position-relative d-inline-block">            
+                    <span *ngIf="shoppedLength" class="number-count"> {{shoppedLength}} </span>
+                    <img *ngIf="shopped?.length === 0 || !shopped" class="nav_icon" src="assets/img/icons/green-shopping-outline.svg" />
+                    <img *ngIf="shopped?.length > 0" class="nav_icon" src="assets/img/icons/green-shopping-cart.svg" />
+                </div>
+            </li>
          </ul>
          <h5>+91 9080674229</h5>
          <span>support 24/7 time</span>
@@ -31,7 +44,7 @@
      </div>
      <div class="humberger__menu__contact">
          <ul>
-             <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
+             <li><i class="fa fa-envelope"></i> hello@lemarchedegarlande.com</li>
              <li>Free Shipping for all Order of $99</li>
          </ul>
      </div>
