--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -29,15 +29,19 @@
 
                   <section class="example-section">
                     <div *ngFor="let item of categoryArr;">
-                        <span class="example-list-section">
+                        <div class="example-list-section">
                             <mat-checkbox class="example-margin"
                                 [value]="item.main_category"
                                 [checked]="item.checked"
                                 (change)="selectAll($event)">
                                 {{item.main_category}}
                             </mat-checkbox>
-                        </span>
-                        <span class="example-list-section">
+                            <img (click)="openProdFilter(item.main_category)" [ngClass]="{'open': openProdFilterAccord !== item.main_category}"
+                                    class="down_arrow_mob" src="assets/img/icons/down-arrow.svg" />
+                            <img (click)="closeProdFilter()" [ngClass]="{'open': openProdFilterAccord === item.main_category}" 
+                                    class="down_arrow_mob rotate" src="assets/img/icons/down-arrow.svg" />
+                        </div>
+                        <div class="example-list-section mob_accord_product" [ngClass]="{'open': openProdFilterAccord === item.main_category}">
                             <ul>
                                 <li *ngFor="let subItem of item.sub_category"
                                     >
@@ -48,7 +52,7 @@
                                     </mat-checkbox>
                                 </li>
                             </ul>
-                        </span>
+                        </div>
                     </div>
                   </section>
                   
@@ -85,7 +89,7 @@
                   </div>
               </div> -->
             <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-6" *ngFor="let item of productList">
+                <div class="col-lg-4 col-md-6 col-sm-6 prod_mob_layout" *ngFor="let item of productList">
                     <div class="product__item">
                         <!-- [style.backgroundImage]="'url(assets/'+ item.image_url +')'" -->
                         <div class="product__item__pic set-bg">
