--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -133,7 +133,9 @@
           </div>
       </div>
   </div>
+  <h1> {{scrolled === scrollable}} </h1>
 </section>
+
 <!-- Product Section End -->
 </div>
 
